--- a/kitty.conf
+++ b/kitty.conf
@@ -24,7 +24,7 @@ Fonts {{{
 #:     italic_font      Operator Mono Book Italic
 #:     bold_italic_font Operator Mono Medium Italic
 
- font_size 14.0
+ font_size 12.0
 
 #: Font size (in pts)
 
@@ -2397,7 +2397,7 @@ active_tab_font_style   italic
 # inactive_tab_background #999
 inactive_tab_font_style normal
 
-#include ./kitty-themes/themes/Atom.conf 
+include ./kitty-themes/themes/Batman.conf 
 
 map command+1 goto_tab 1
 map command+2 goto_tab 2
@@ -2410,5 +2410,5 @@ tab_bar_min_tabs 2
 # run this to change themes kitty +kitten themes
 # BEGIN_KITTY_THEME
 # Apprentice
-include current-theme.conf
+#include current-theme.conf
 # END_KITTY_THEME
