--- a/kitty.conf
+++ b/kitty.conf
@@ -1,12 +1,13 @@
 # vim:fileencoding=utf-8:foldmethod=marker
 
-Fonts {{{
+# Fonts {{{
 
 #: kitty has very powerful font management. You can configure
 #: individual font faces and even specify special fonts for particular
 #: characters.
 
- font_family      SauceCodePro Nerd Font
+ # font_family      JetBrains Mono
+ font_family     Iosevka Nerd Font
 # bold_font        auto
 # italic_font      auto
 # bold_italic_font auto
@@ -24,7 +25,7 @@ Fonts {{{
 #:     italic_font      Operator Mono Book Italic
 #:     bold_italic_font Operator Mono Medium Italic
 
- font_size 12.0
+ font_size 14.0
 
 #: Font size (in pts)
 
@@ -239,7 +240,7 @@ Fonts {{{
 #: working with applications that use colors that do not contrast well
 #: with your preferred color scheme.
 
-}}}
+# }}}
 
 #: Cursor customization {{{
 
@@ -1079,7 +1080,6 @@ scrollback_lines 2000
 #: The foreground and background colors.
 
  background_opacity 1
- renderer = gpu
 
 #: The opacity of the background. A number between zero and one, where
 #: one is opaque and zero is fully transparent. This will only work if
@@ -1404,7 +1404,7 @@ scrollback_lines 2000
 #: builds do not do update checking. Changing this option by reloading
 #: the config is not supported.
 
-startup_session ~/.config/kitty/kitty-startup.session\
+startup_session ~/.config/kitty/kitty-startup.session
 
 #: Path to a session file to use for all kitty instances. Can be
 #: overridden by using the kitty --session =none command line option
@@ -2385,10 +2385,12 @@ startup_session ~/.config/kitty/kitty-startup.session\
 #: }}}
 
 #: }}}
-
+remember_window_size  yes
+initial_window_width  640
+initial_window_height 400
 #bell_on_tab             yes
 tab_bar_edge            top
-tab_title_template      {index}
+tab_bar_style powerline
 focus_follows_mouse     yes
 # active_tab_foreground   #000
 # active_tab_background   #73D216
@@ -2397,18 +2399,27 @@ active_tab_font_style   italic
 # inactive_tab_background #999
 inactive_tab_font_style normal
 
-include ./kitty-themes/themes/Batman.conf 
-
+include ./kitty-themes/themes/Chalkboard.conf
+kitty_mod ctrl+shift
+map kitty_mod+t     new_tab_with_cwd
 map command+1 goto_tab 1
 map command+2 goto_tab 2
 map command+3 goto_tab 3
 map command+3 goto_tab 4
 map command+3 goto_tab 5
-map cmd+t new_tab_with_cwd
 tab_bar_min_tabs 2
+# map kitty_mod+l layout_action rotate
+map kitty_mod+t toggle_layout stack
+map kitty_mod+n next_layout
 
+map kitty_mod+left resize_window narrower
+map kitty_mod+right resize_window wider
+map kitty_mod+up resize_window taller
+map kitty_mod+down resize_window shorter 3
+# reset all windows in the tab to default sizes
+map ctrl+home resize_window reset
 # run this to change themes kitty +kitten themes
 # BEGIN_KITTY_THEME
-# Apprentice
-#include current-theme.conf
+# duckbones
+include current-theme.conf
 # END_KITTY_THEME
