--- a/kitty.conf
+++ b/kitty.conf
@@ -2,7 +2,7 @@ remember_window_size  yes
 initial_window_width  640
 initial_window_height 400
 
-font_family	SauceCodePro nerd Font
+font_family	 JetBrainsMono Nerd Font Mono
 font_size 14.0
 
 sync_to_monitor yes
@@ -12,8 +12,8 @@ sync_to_monitor yes
 cursor_shape block
 scrollback_lines 2000
 window_padding_width 4
-background_opacity 0.85
-background_blur 70
+background_opacity 0.80
+background_blur 60
 background_tint 0
 dim_opacity 0.4
 startup_session ~/.config/kitty/kitty-startup.session
@@ -34,6 +34,7 @@ map command+3 goto_tab 3
 map cmd+4 goto_tab 4
 map cmd+5 goto_tab 5
 tab_bar_min_tabs 2
+hide_window_decorations titlebar-only
 
 macos_option_as_alt yes
 map kitty_mod+y toggle_layout stack
