no message - upd

--- a/kitty.conf
+++ b/kitty.conf
@@ -12,10 +12,12 @@ sync_to_monitor yes
 cursor_shape block
 scrollback_lines 2000
 window_padding_width 4
-background_opacity 0.80
-background_blur 60
-background_tint 0
-dim_opacity 0.4
+background_opacity 1
+background_blur 0
+background_tint 0.70
+dim_opacity 0
+background_image ./images/bg2.png
+background_image_layout scaled
 startup_session ~/.config/kitty/kitty-startup.session
 remember_window_size  yes
 initial_window_width  640
